--- a/index.html
+++ b/index.html
@@ -22,6 +22,7 @@
 <body class="max-w-screen-xl mx-auto lato">
     <header>
         <nav>
+            
             <div class="navbar bg-base-100 bg-[#F85559] rounded-[600px] mt-12 p-5">
                 <div class="flex-1 text-white ">
                     <a class="btn btn-ghost normal-case text-xl ">Home</a>
@@ -141,7 +142,7 @@
                     </div>
                 </div>
             </div>
-            <div class="flex gap-24 bg-white rounded-lg ml-10 -mt-28 pl-12 p-7 drop-shadow-lg w-[1196px]">
+            <div class=" flex gap-24 bg-white rounded-lg ml-10 -mt-28 pl-12 p-7 drop-shadow-lg w-[1196px] ">
                 <div>
                     <img src="./images/fruit1.png" alt="">
                     <p class="text-center">strawberry</p>
@@ -169,7 +170,7 @@
         <!-- deal of the day section -->
         <section>
             <div>
-                <div class="mt-36 flex justify-between">
+                <div class="mt-36 flex  justify-between">
                     <div>
                         <h3 class="text-5xl font-extrabold">Deal of the day</h3>
                         <p class="mt-6">Contrary to popular belief, is not simply random text. It has roots in a piece
@@ -207,7 +208,7 @@
 
 
                 </div>
-                <div class="mt-12 flex gap-6 ">
+                <div class=" grid grid-cols-1 md:grid-cols-4  mt-12 gap-20 ">
                     <!-- card-1 -->
                     <div class="card w-80 bg-base-100 shadow-xl">
                         <figure class="px-10 pt-10">
@@ -520,7 +521,7 @@
         </section>
         <!-- meet team section -->
         <section>
-            <div class=" mt-40 relative ">
+            <div class=" mt-40 relative  ">
                 <img src="images/banner1.png" alt="">
                 <div class="absolute inset-0 bg-black opacity-50"></div>
             </div>
@@ -589,7 +590,7 @@
                 </div>
                 <div>
                     <div class="mt-20 flex">
-                        <div class=" rounded-full bg-[#1212121A] h-14 w-14 pl-4 pt-3  ">
+                        <div class=" rounded-full bg-[#1212121A] h-14 w-14 pl-4 pt-3 mt-4  ">
                             <img src="./images/group 1.svg" alt="">
                         </div>
                         <div>
@@ -601,7 +602,7 @@
                     </div>
 
                     <div class="mt-12 flex">
-                        <div class=" rounded-full bg-[#1212121A] h-14 w-14 pl-4 pt-3  ">
+                        <div class=" rounded-full bg-[#1212121A] h-14 w-14 pl-4 pt-3  mt-4  ">
                             <img src="./images/love 1.svg" alt="">
                         </div>
                         <div>
@@ -613,7 +614,7 @@
                     </div>
 
                     <div class="mt-12 flex">
-                        <div class=" rounded-full bg-[#1212121A] h-14 w-14 pl-4 pt-3  ">
+                        <div class=" rounded-full bg-[#1212121A] h-14 w-14 pl-4 pt-3  mt-4   ">
                             <img src="./images/gift-box 1.svg" alt="">
                         </div>
                         <div>
